--- a/Esercizio 1/wsd.ipynb
+++ b/Esercizio 1/wsd.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,16 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[['The', 'Fulton', 'County', 'Grand', 'Jury', 'said', 'Friday', 'an', 'investigation', 'of', 'Atlanta', \"'s\", 'recent', 'primary', 'election', 'produced', '``', 'no', 'evidence', \"''\", 'that', 'any', 'irregularities', 'took', 'place', '.'], ['The', 'jury', 'further', 'said', 'in', 'term', 'end', 'presentments', 'that', 'the', 'City', 'Executive', 'Committee', ',', 'which', 'had', 'over-all', 'charge', 'of', 'the', 'election', ',', '``', 'deserves', 'the', 'praise', 'and', 'thanks', 'of', 'the', 'City', 'of', 'Atlanta', \"''\", 'for', 'the', 'manner', 'in', 'which', 'the', 'election', 'was', 'conducted', '.'], ...]"
-      ]
+      "text/plain": "[['The', 'Fulton', 'County', 'Grand', 'Jury', 'said', 'Friday', 'an', 'investigation', 'of', 'Atlanta', \"'s\", 'recent', 'primary', 'election', 'produced', '``', 'no', 'evidence', \"''\", 'that', 'any', 'irregularities', 'took', 'place', '.'], ['The', 'jury', 'further', 'said', 'in', 'term', 'end', 'presentments', 'that', 'the', 'City', 'Executive', 'Committee', ',', 'which', 'had', 'over-all', 'charge', 'of', 'the', 'election', ',', '``', 'deserves', 'the', 'praise', 'and', 'thanks', 'of', 'the', 'City', 'of', 'Atlanta', \"''\", 'for', 'the', 'manner', 'in', 'which', 'the', 'election', 'was', 'conducted', '.'], ...]"
      },
-     "execution_count": 88,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -79,16 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[[['The'], Tree(Lemma('group.n.01.group'), [Tree('NE', ['Fulton', 'County', 'Grand', 'Jury'])]), Tree(Lemma('state.v.01.say'), ['said']), Tree(Lemma('friday.n.01.Friday'), ['Friday']), ['an'], Tree(Lemma('probe.n.01.investigation'), ['investigation']), ['of'], Tree(Lemma('atlanta.n.01.Atlanta'), ['Atlanta']), [\"'s\"], Tree(Lemma('late.s.03.recent'), ['recent']), Tree(Lemma('primary.n.01.primary_election'), ['primary', 'election']), Tree(Lemma('produce.v.04.produce'), ['produced']), ['``'], ['no'], Tree(Lemma('evidence.n.01.evidence'), ['evidence']), [\"''\"], ['that'], ['any'], Tree(Lemma('abnormality.n.04.irregularity'), ['irregularities']), Tree(Lemma('happen.v.01.take_place'), ['took', 'place']), ['.']], [['The'], Tree(Lemma('jury.n.01.jury'), ['jury']), Tree(Lemma('far.r.02.far'), ['further']), Tree(Lemma('state.v.01.say'), ['said']), ['in'], Tree(Lemma('term.n.02.term'), ['term']), Tree(Lemma('end.n.02.end'), ['end']), Tree(Lemma('presentment.n.01.presentment'), ['presentments']), ['that'], ['the'], Tree(Lemma('group.n.01.group'), [Tree('NE', ['City', 'Executive', 'Committee'])]), [','], ['which'], Tree(Lemma('own.v.01.have'), ['had']), Tree(Lemma('overall.s.02.overall'), ['over-all']), Tree(Lemma('mission.n.03.charge'), ['charge']), ['of'], ['the'], Tree(Lemma('election.n.01.election'), ['election']), [','], ['``'], Tree(Lemma('deserve.v.01.deserve'), ['deserves']), ['the'], Tree(Lemma('praise.n.01.praise'), ['praise']), ['and'], Tree(Lemma('thanks.n.01.thanks'), ['thanks']), ['of'], ['the'], Tree(Lemma('location.n.01.location'), [Tree('NE', ['City', 'of', 'Atlanta'])]), [\"''\"], ['for'], ['the'], Tree(Lemma('manner.n.01.manner'), ['manner']), ['in'], ['which'], ['the'], Tree(Lemma('election.n.01.election'), ['election']), ['was'], Tree(Lemma('conduct.v.01.conduct'), ['conducted']), ['.']], ...]"
-      ]
+      "text/plain": "[[['The'], Tree(Lemma('group.n.01.group'), [Tree('NE', ['Fulton', 'County', 'Grand', 'Jury'])]), Tree(Lemma('state.v.01.say'), ['said']), Tree(Lemma('friday.n.01.Friday'), ['Friday']), ['an'], Tree(Lemma('probe.n.01.investigation'), ['investigation']), ['of'], Tree(Lemma('atlanta.n.01.Atlanta'), ['Atlanta']), [\"'s\"], Tree(Lemma('late.s.03.recent'), ['recent']), Tree(Lemma('primary.n.01.primary_election'), ['primary', 'election']), Tree(Lemma('produce.v.04.produce'), ['produced']), ['``'], ['no'], Tree(Lemma('evidence.n.01.evidence'), ['evidence']), [\"''\"], ['that'], ['any'], Tree(Lemma('abnormality.n.04.irregularity'), ['irregularities']), Tree(Lemma('happen.v.01.take_place'), ['took', 'place']), ['.']], [['The'], Tree(Lemma('jury.n.01.jury'), ['jury']), Tree(Lemma('far.r.02.far'), ['further']), Tree(Lemma('state.v.01.say'), ['said']), ['in'], Tree(Lemma('term.n.02.term'), ['term']), Tree(Lemma('end.n.02.end'), ['end']), Tree(Lemma('presentment.n.01.presentment'), ['presentments']), ['that'], ['the'], Tree(Lemma('group.n.01.group'), [Tree('NE', ['City', 'Executive', 'Committee'])]), [','], ['which'], Tree(Lemma('own.v.01.have'), ['had']), Tree(Lemma('overall.s.02.overall'), ['over-all']), Tree(Lemma('mission.n.03.charge'), ['charge']), ['of'], ['the'], Tree(Lemma('election.n.01.election'), ['election']), [','], ['``'], Tree(Lemma('deserve.v.01.deserve'), ['deserves']), ['the'], Tree(Lemma('praise.n.01.praise'), ['praise']), ['and'], Tree(Lemma('thanks.n.01.thanks'), ['thanks']), ['of'], ['the'], Tree(Lemma('location.n.01.location'), [Tree('NE', ['City', 'of', 'Atlanta'])]), [\"''\"], ['for'], ['the'], Tree(Lemma('manner.n.01.manner'), ['manner']), ['in'], ['which'], ['the'], Tree(Lemma('election.n.01.election'), ['election']), ['was'], Tree(Lemma('conduct.v.01.conduct'), ['conducted']), ['.']], ...]"
      },
-     "execution_count": 90,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -146,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -197,12 +193,12 @@
      "evalue": "sequence item 0: expected str instance, SemcorSentence found",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\OliverioM\\Desktop\\TLN - Radicioni\\TLN2\\Esercizio 1\\wsd.ipynb Cella 9\u001b[0m in \u001b[0;36m<cell line: 15>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X20sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m             actual_synset\u001b[39m.\u001b[39mappend(wn\u001b[39m.\u001b[39msynset(\u001b[39m'\u001b[39m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(\u001b[39mstr\u001b[39m(label)\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m)[:\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m])))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X20sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m \u001b[39m#run lesk\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X20sZmlsZQ%3D%3D?line=37'>38</a>\u001b[0m predicted_synset \u001b[39m=\u001b[39m corpus_lesk(random_word, sentence)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X20sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mrandom word: \u001b[39m\u001b[39m'\u001b[39m, random_word)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X20sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mpredicted: \u001b[39m\u001b[39m'\u001b[39m, predicted_synset)\n",
-      "\u001b[1;32mc:\\Users\\OliverioM\\Desktop\\TLN - Radicioni\\TLN2\\Esercizio 1\\wsd.ipynb Cella 9\u001b[0m in \u001b[0;36mcorpus_lesk\u001b[1;34m(word, sentence)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X20sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39mfor\u001b[39;00m sense \u001b[39min\u001b[39;00m wn\u001b[39m.\u001b[39msynsets(word):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X20sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m     signature \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m(preprocessing(sense\u001b[39m.\u001b[39mdefinition()))\u001b[39m.\u001b[39munion(\u001b[39mset\u001b[39m(preprocessing(\u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(sense\u001b[39m.\u001b[39mexamples()))))\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X20sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m     signature \u001b[39m=\u001b[39m signature\u001b[39m.\u001b[39munion(get_context_from_semcor(sense))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X20sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m     overlap \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(context\u001b[39m.\u001b[39mintersection(signature))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X20sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m     \u001b[39mif\u001b[39;00m overlap \u001b[39m>\u001b[39m max_overlap:\n",
-      "\u001b[1;32mc:\\Users\\OliverioM\\Desktop\\TLN - Radicioni\\TLN2\\Esercizio 1\\wsd.ipynb Cella 9\u001b[0m in \u001b[0;36mget_context_from_semcor\u001b[1;34m(target_sense)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X20sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mif\u001b[39;00m target_sense \u001b[39min\u001b[39;00m lemma_list(sent):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X20sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m         sentences\u001b[39m.\u001b[39mappend(sent)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X20sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mset\u001b[39m(preprocessing(\u001b[39m'\u001b[39;49m\u001b[39m \u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m.\u001b[39;49mjoin(sentences)))\n",
-      "\u001b[1;31mTypeError\u001b[0m: sequence item 0: expected str instance, SemcorSentence found"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_12464\\1238689674.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     36\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     37\u001B[0m     \u001B[1;31m#run lesk\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 38\u001B[1;33m     \u001B[0mpredicted_synset\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mcorpus_lesk\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mrandom_word\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0msentence\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     39\u001B[0m     \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'random word: '\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mrandom_word\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     40\u001B[0m     \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'predicted: '\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mpredicted_synset\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_12464\\3510799658.py\u001B[0m in \u001B[0;36mcorpus_lesk\u001B[1;34m(word, sentence)\u001B[0m\n\u001B[0;32m     20\u001B[0m     \u001B[1;32mfor\u001B[0m \u001B[0msense\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mwn\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msynsets\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mword\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     21\u001B[0m         \u001B[0msignature\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mset\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mpreprocessing\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msense\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdefinition\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0munion\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mset\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mpreprocessing\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m' '\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mjoin\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msense\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mexamples\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 22\u001B[1;33m         \u001B[0msignature\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0msignature\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0munion\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mget_context_from_semcor\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msense\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     23\u001B[0m         \u001B[0moverlap\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mlen\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mcontext\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mintersection\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msignature\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     24\u001B[0m         \u001B[1;32mif\u001B[0m \u001B[0moverlap\u001B[0m \u001B[1;33m>\u001B[0m \u001B[0mmax_overlap\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_12464\\1318463299.py\u001B[0m in \u001B[0;36mget_context_from_semcor\u001B[1;34m(target_sense)\u001B[0m\n\u001B[0;32m      7\u001B[0m             \u001B[0msentences\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mappend\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msent\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      8\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 9\u001B[1;33m     \u001B[1;32mreturn\u001B[0m \u001B[0mset\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mpreprocessing\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m' '\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mjoin\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msentences\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m: sequence item 0: expected str instance, SemcorSentence found"
      ]
     }
    ],
